--- a/sesion09selenium.adoc
+++ b/sesion09selenium.adoc
@@ -572,6 +572,35 @@ image::google-chrome-procesos-sin-morir.png[role="thumb", align="center"]
 
 Es necesario revisar los procesos tanto en nuestra máquina local como en Jenkins y matarlos para evitar que queden ejecutándose consumiendo recursos.
 
+- *Alternativa a meter segundos de espera con Time.sleep()*. 
+En Selenium IDE existe el comando https://www.selenium.dev/selenium-ide/docs/en/api/commands#wait-for-element-visible[`waitForElementVisible`] que permite esperar hasta que un elemento esté visible. Aunque al grabar el test con Selenium IDE no es necesario añadir este comando, porque ya lo tiene implícito, cuando exportamos a WebDriver sí necesitamos meter las esperas. Por tanto *es recomendable* este comando en todos los pasos del test que veas que tarda en cargar la página.
+
+.Comando `waitForElementVisible`
+image::selenium-ide-waitForElementVisible.png[role="thumb", align="center"]
+
+En JUnit se convierte en: 
+
+.Código JUnit para `waitForElementVisible`
+image::selenium-webdriver-waitForElementVisible.png[role="thumb", align="center"]
+
+[source,java]
+----
+
+  // 9 | waitForElementVisible | xpath="//h2[contains(.,\'Ingeniería y Arquitectura\')]" | 30000 
+  {
+	  WebDriverWait wait = new WebDriverWait(driver, 30);
+    wait.until(ExpectedConditions.visibilityOfElementLocated(By.xpath("//h2[contains(.,\'Ingeniería y Arquitectura\')]")));
+  }
+----
+
+Otros métodos como la configuración de esperas implícitas y explícitas (`implicitlyWait`) no solucionan el problema, y aunque aparezcan en la documentación de Selenium y en los ejemplos, no dan el resultado esperado. Por ejemplo el método https://www.selenium.dev/selenium/docs/api/java/org/openqa/selenium/WebDriver.Timeouts.html#implicitlyWait-long-java.util.concurrent.TimeUnit-[implicitlyWait]: 
+
+    driver.manage().timeouts().implicitlyWait(30, TimeUnit.SECONDS);
+
+Se supone que establece la cantidad de tiempo qeu el driver debería esperar cuando busca un elemento si este no está presente inmediatamente. Sin embargo, no funciona como se espera y los errores no se solucionan.
+
+Así que la única forma es añadir manualmente tiempo de espera en cada paso que requiera tiempo de carga de los contenidos. Puesto que añadir un `sleep()` está desaconsejado, la mejor opción entonces es añadir comandos `waitForElementVisible`.
+
 
 == Más info
 
