--- a/sesion09selenium.adoc
+++ b/sesion09selenium.adoc
@@ -28,7 +28,7 @@ Nombre y título del trabajo
 = Actividad 9. Pruebas de aceptación con Selenium
 
 Herramientas y Métodos en Ingeniería del Software
-Version 1.0, Mayo-2020.
+Version 1.1, Junio-2020.
 Joaquín Cañadas <jjcanada@ual.es>
 
 // Entrar en modo no numerado de apartados
@@ -269,6 +269,11 @@ Es importante que los drivers específicos de los navegadores no se guarden en G
 
 .Cambiar el selector de un elemento de la página
 image::selenium-ide-change-selector-xpath.png[role="thumb", align="center"]
+
+[TIP]
+====
+* Más información sobre los tipos de selectores (_locators_) en Selenium IDE: https://www.guru99.com/locators-in-selenium-ide.html[Locators in Selenium IDE: CSS Selector, DOM, XPath, Link Text, ID ]
+====
 
 También puede ser necesario añadir un tiempo de espera en medio de cada acción para que de tiempo a que se cargue el formulario, la página, etc. Por ejemplo, antes del primer `sendKeys` que escribe un texto en un campo de formulario, y también antes y después de `click()` en un botón de formulario. 
 
